--- a/file-upload/jquery-file-upload/index.html
+++ b/file-upload/jquery-file-upload/index.html
@@ -10,9 +10,9 @@
 <title>%SITE_NAME%</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- Bootstrap styles -->
-<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+<link rel="stylesheet" href="upload/bower_components/bootstrap/dist/css/bootstrap.min.css">
 <!-- bootstrap-tagsinput styles -->
-<link rel="stylesheet" href="bower_components/bootstrap-tagsinput/dist/bootstrap-tagsinput.css">
+<link rel="stylesheet" href="upload/bower_components/bootstrap-tagsinput/dist/bootstrap-tagsinput.css">
 <style media="screen" type="text/css">
 .bootstrap-tagsinput {
   width: 90%;
@@ -35,15 +35,15 @@
 }
 </style>
 <!-- Generic page styles -->
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="upload/css/style.css">
 <!-- blueimp Gallery styles -->
-<link rel="stylesheet" href="bower_components/blueimp-gallery/css/blueimp-gallery.min.css">
+<link rel="stylesheet" href="upload/bower_components/blueimp-gallery/css/blueimp-gallery.min.css">
 <!-- CSS to style the file input field as button and adjust the Bootstrap progress bars -->
-<link rel="stylesheet" href="css/jquery.fileupload.css">
-<link rel="stylesheet" href="css/jquery.fileupload-ui.css">
+<link rel="stylesheet" href="upload/css/jquery.fileupload.css">
+<link rel="stylesheet" href="upload/css/jquery.fileupload-ui.css">
 <!-- CSS adjustments for browsers with JavaScript disabled -->
-<noscript><link rel="stylesheet" href="css/jquery.fileupload-noscript.css"></noscript>
-<noscript><link rel="stylesheet" href="css/jquery.fileupload-ui-noscript.css"></noscript>
+<noscript><link rel="stylesheet" href="upload/css/jquery.fileupload-noscript.css"></noscript>
+<noscript><link rel="stylesheet" href="upload/css/jquery.fileupload-ui-noscript.css"></noscript>
 <script>
 function toggle(checkboxID, toggleSelectID) {
     var checkbox = document.getElementById(checkboxID);
@@ -59,7 +59,7 @@ function toggle(checkboxID, toggleSelectID) {
 </head>
 <body>
 <div class="container">
-    <img class="imgcenter" src="Malcolm_banner.png" alt="%SITE_NAME%">
+    <img class="imgcenter" src="upload/Malcolm_banner.png" alt="%SITE_NAME%">
     <div class="panel panel-default">
       <div class="panel-heading">
         <h3 class="panel-title center">%SITE_NAME%</h3>
@@ -68,7 +68,7 @@ function toggle(checkboxID, toggleSelectID) {
     <br>
     <br>
     <!-- The file upload form used as target for the file upload widget -->
-    <form id="fileupload" action="/" method="POST" enctype="multipart/form-data">
+    <form id="fileupload" action="" method="POST" enctype="multipart/form-data">
         <!-- The fileupload-buttonbar contains buttons to add files and start/cancel the upload -->
         <div class="row fileupload-buttonbar">
             <div class="col-lg-7">
@@ -170,30 +170,30 @@ function toggle(checkboxID, toggleSelectID) {
     <tr class="template-download"/>
 {% } %}
 </script>
-<script src="bower_components/jquery/dist/jquery.min.js"></script>
+<script src="upload/bower_components/jquery/dist/jquery.min.js"></script>
 <!-- The jQuery UI widget factory, can be omitted if jQuery UI is already included -->
-<script src="js/vendor/jquery.ui.widget.js"></script>
+<script src="upload/js/vendor/jquery.ui.widget.js"></script>
 <!-- The Templates plugin is included to render the upload/download listings -->
-<script src="bower_components/blueimp-tmpl/js/tmpl.min.js"></script>
+<script src="upload/bower_components/blueimp-tmpl/js/tmpl.min.js"></script>
 <!-- Bootstrap JS is not required, but included for the responsive demo navigation -->
-<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="upload/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <!-- blueimp Gallery script -->
-<script src="bower_components/blueimp-gallery/js/jquery.blueimp-gallery.min.js"></script>
+<script src="upload/bower_components/blueimp-gallery/js/jquery.blueimp-gallery.min.js"></script>
 <!-- bootstrap-tagsinput script -->
-<script src="bower_components/bootstrap-tagsinput/dist/bootstrap-tagsinput.min.js"></script>
+<script src="upload/bower_components/bootstrap-tagsinput/dist/bootstrap-tagsinput.min.js"></script>
 <!-- The Iframe Transport is required for browsers without support for XHR file uploads -->
-<script src="js/jquery.iframe-transport.js"></script>
+<script src="upload/js/jquery.iframe-transport.js"></script>
 <!-- The basic File Upload plugin -->
-<script src="js/jquery.fileupload.js"></script>
+<script src="upload/js/jquery.fileupload.js"></script>
 <!-- The File Upload processing plugin -->
-<script src="js/jquery.fileupload-process.js"></script>
+<script src="upload/js/jquery.fileupload-process.js"></script>
 <!-- The File Upload user interface plugin -->
-<script src="js/jquery.fileupload-ui.js"></script>
+<script src="upload/js/jquery.fileupload-ui.js"></script>
 <!-- The main application script -->
-<script src="js/main.js"></script>
+<script src="upload/js/main.js"></script>
 <!-- The XDomainRequest Transport is included for cross-domain file deletion for IE 8 and IE 9 -->
 <!--[if (gte IE 8)&(lt IE 10)]>
-<script src="js/cors/jquery.xdr-transport.js"></script>
+<script src="upload/js/cors/jquery.xdr-transport.js"></script>
 <![endif]-->
 </body>
 </html>
