work in progress on idaholab/Malcolm#132, standardizing some names

--- a/name-map-ui/site/index.html
+++ b/name-map-ui/site/index.html
@@ -136,7 +136,7 @@
       const address = addressField.val().trim();
       const name = nameField.val().trim();
       const tag = tagField.val().trim();
-      if ((file_types_valid.has(type)) &&
+      if ((map_types_valid.has(type)) &&
           (address) && (address.length > 0) &&
           (name) && (name.length > 0)) {
         mappingList.add({
@@ -160,7 +160,7 @@
       const address = addressField.val().trim();
       const name = nameField.val().trim();
       const tag = tagField.val().trim();
-      if ((file_types_valid.has(type)) &&
+      if ((map_types_valid.has(type)) &&
           (address) && (address.length > 0) &&
           (name) && (name.length > 0)) {
         var item = mappingList.get('id', itemId)[0];
@@ -336,48 +336,26 @@
       tagField.val('');
     }
 
-    const file_type_txt_cidr  = 'segment';
-    const file_type_txt_host  = 'host';
-    const file_types_valid    = new Set([file_type_txt_cidr, file_type_txt_host]);
+    const map_type_cidr  = 'segment';
+    const map_type_host  = 'host';
+    const map_types_valid    = new Set([map_type_cidr, map_type_host]);
 
     const file_spec_on_server = 'SERVER';
     const file_spec_in_memory = 'LOCALSTR';
     const file_specs_valid    = new Set([file_spec_on_server, file_spec_in_memory]);
 
 
-    // given the text of a mapping file (eg., net-map.json, cidr-map.txt, host-map.txt)
+    // given the text of a mapping file (eg., net-map.json)
     // populate an array containing the mapping entries from that file
-    function parseMapFileText(fileTxt, mapType=null) {
+    function parseMapFileText(fileTxt) {
       let result;
 
       if (hasJsonStructure(fileTxt)) {
-        // is already JSON text, should be the format we want
+        // is JSON text, should be the format we want
         result = JSON.parse(fileTxt);
 
       } else {
-        // parse the lines from the cidr-map.txt/host-map.txt format
-        result = [];
-        const lines = fileTxt.split(/\r?\n/);
-        for (lineIdx in lines) {
-          let line = lines[lineIdx];
-          if (!line.startsWith("#")) {
-            const vals = line.split("|");
-            const valsLen = vals.length;
-            if ((valsLen >= 2) && (valsLen < 4)) {
-              const name = vals[1].trim();
-              const tag = (valsLen > 2) ? vals[2].trim() : "";
-              const addrs = vals[0].trim().split(",");
-              for (addrIdx in addrs) {
-                result.push({
-                  type: mapType,
-                  address: addrs[addrIdx],
-                  name: name,
-                  tag: tag
-                });
-              }
-            } // line has the right number of delimited fields
-          } // line is not a # comment
-        } // for (lineIdx in lines)
+        result = null;
       } // if/else hasJsonStructure
 
       if (!Array.isArray(result)) {
@@ -389,9 +367,7 @@
 
 
     // given an array of filespecs (eg.,
-    // [{fileType: file_type_txt_cidr, filePath: 'maps/cidr-map.txt'},
-    //  {fileType: file_type_txt_host, filePath: 'maps/host-map.txt'},
-    //  {fileType: null, filePath: 'maps/net-map.json'}]
+    // [{fileType: null, filePath: 'maps/net-map.json'}]
     // read and return an array of the mappings within those files
 
     function loadMapsFromFiles(fileSpecs, cb) {
@@ -400,18 +376,9 @@
 
       if ((fileSpecs.length > 0) && (fileSpecs[0]) && (file_specs_valid.has(fileSpecs[0].fileSrc))) {
 
-        // if this is a delimited file (not JSON) mark the type
-        let mapType = null;
-        if (fileSpecs[0].fileType === file_type_txt_cidr) {
-          mapType = "segment";
-        } else if (fileSpecs[0].fileType === file_type_txt_host) {
-          mapType = "host";
-        }
-        // else the type is per-item in the JSON
-
         if (fileSpecs[0].fileSrc === file_spec_in_memory) {
           // the text of the file is already in memory
-          result = parseMapFileText(fileSpecs[0].filePath, mapType);
+          result = parseMapFileText(fileSpecs[0].filePath);
           return cb(result);
 
         } else {
@@ -422,7 +389,7 @@
           txtFile.onreadystatechange = function() {
             if (txtFile.status === 200) {
               if (txtFile.readyState === 4) {
-                result = parseMapFileText(txtFile.responseText, mapType);
+                result = parseMapFileText(txtFile.responseText);
                 if (fileSpecs.length > 1) {
                   // we have processed this fileSpec, process the next
                   loadMapsFromFiles(fileSpecs.slice(1), function(nextFileResult) {
@@ -462,12 +429,7 @@
     } // loadMapsFromFiles
 
     function populateMapList(fileSpecs, newSaveState=0) {
-      // load old delimited plain text format
-      //   IP or MAC address to host name map:
-      //     address|host name|required tag
-      //   CIDR to network segment format:
-      //     IP(s)|segment name|required tag
-      // and JSON-formatted native format:
+      // load JSON-formatted native format:
       // [
       //   {
       //     "type": "segment",
@@ -487,7 +449,7 @@
         // populate the list.js List object
         for (mapKey in mapsHash) {
           let map = mapsHash[mapKey];
-          if ((file_types_valid.has(map.type)) &&
+          if ((map_types_valid.has(map.type)) &&
               (map.address) && (map.address.length > 0) &&
               (map.name) && (map.name.length > 0)) {
             mappingList.add({
@@ -506,14 +468,8 @@
       });
     } // populateMapList
 
-    // initial page load from cidr-map.txt, host-map.txt, and/or net-map.json
-    populateMapList([{fileType: file_type_txt_cidr,
-                      fileSrc: file_spec_on_server,
-                      filePath: 'name-map-ui/maps/cidr-map.txt',},
-                     {fileType: file_type_txt_host,
-                      fileSrc: file_spec_on_server,
-                      filePath: 'name-map-ui/maps/host-map.txt'},
-                     {fileType: null,
+    // initial page load from net-map.json
+    populateMapList([{fileType: null,
                       fileSrc: file_spec_on_server,
                       filePath: 'name-map-ui/maps/net-map.json'}]);
 
